kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glitchgate
  labels:
    app: glitchgate
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: glitchgate
